; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_bio_callback_test.c_my_bio_callback.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_bio_callback_test.c_my_bio_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@my_param_count = common dso_local global i64 0, align 8
@MAXCOUNT = common dso_local global i64 0, align 8
@my_param_b = common dso_local global i32** null, align 8
@my_param_oper = common dso_local global i32* null, align 8
@my_param_argp = common dso_local global i8** null, align 8
@my_param_argi = common dso_local global i32* null, align 8
@my_param_argl = common dso_local global i64* null, align 8
@my_param_ret = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i8*, i32, i64, i64)* @my_bio_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @my_bio_callback(i32* %0, i32 %1, i8* %2, i32 %3, i64 %4, i64 %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  %14 = load i64, i64* @my_param_count, align 8
  %15 = load i64, i64* @MAXCOUNT, align 8
  %16 = icmp uge i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %6
  store i64 -1, i64* %7, align 8
  br label %46

18:                                               ; preds = %6
  %19 = load i32*, i32** %8, align 8
  %20 = load i32**, i32*** @my_param_b, align 8
  %21 = load i64, i64* @my_param_count, align 8
  %22 = getelementptr inbounds i32*, i32** %20, i64 %21
  store i32* %19, i32** %22, align 8
  %23 = load i32, i32* %9, align 4
  %24 = load i32*, i32** @my_param_oper, align 8
  %25 = load i64, i64* @my_param_count, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  store i32 %23, i32* %26, align 4
  %27 = load i8*, i8** %10, align 8
  %28 = load i8**, i8*** @my_param_argp, align 8
  %29 = load i64, i64* @my_param_count, align 8
  %30 = getelementptr inbounds i8*, i8** %28, i64 %29
  store i8* %27, i8** %30, align 8
  %31 = load i32, i32* %11, align 4
  %32 = load i32*, i32** @my_param_argi, align 8
  %33 = load i64, i64* @my_param_count, align 8
  %34 = getelementptr inbounds i32, i32* %32, i64 %33
  store i32 %31, i32* %34, align 4
  %35 = load i64, i64* %12, align 8
  %36 = load i64*, i64** @my_param_argl, align 8
  %37 = load i64, i64* @my_param_count, align 8
  %38 = getelementptr inbounds i64, i64* %36, i64 %37
  store i64 %35, i64* %38, align 8
  %39 = load i64, i64* %13, align 8
  %40 = load i64*, i64** @my_param_ret, align 8
  %41 = load i64, i64* @my_param_count, align 8
  %42 = getelementptr inbounds i64, i64* %40, i64 %41
  store i64 %39, i64* %42, align 8
  %43 = load i64, i64* @my_param_count, align 8
  %44 = add i64 %43, 1
  store i64 %44, i64* @my_param_count, align 8
  %45 = load i64, i64* %13, align 8
  store i64 %45, i64* %7, align 8
  br label %46

46:                                               ; preds = %18, %17
  %47 = load i64, i64* %7, align 8
  ret i64 %47
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
